--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,38 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  background-color: #f7f7f7;
+  padding: 15px;
+  font-family: "Inter", sans-serif;
+}
+
+.page-wrapper {
+  max-width: 375px;
+  margin: auto;
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+}
+
+.header {
+  color: #fff;
+  padding: 40px 42px 145px;
+  background: linear-gradient(
+      0deg,
+      rgba(58, 58, 58, 0.6),
+      rgba(58, 58, 58, 0.6)
+    ),
+    url("../img/header-bg.png") no-repeat center / cover;
+  border-radius: 0px 0px 90px 90px;
+}
+
+.hello {
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.hello-text {
+  font-weight: 400;
+  font-size: 12px;
+}
