--- a/css/style.css
+++ b/css/style.css
@@ -72,3 +72,54 @@ body {
   color: #6a6a6a;
   margin-top: 4px;
 }
+
+.card {
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  background: #fff;
+  border-radius: 10px;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  padding: 20px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  max-width: 260px;
+  margin: auto;
+  gap: 10px;
+}
+
+.button {
+  background-color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  border: 1px solid;
+  flex-shrink: 1px;
+  width: 100%;
+  border-radius: 5px;
+  text-decoration: none;
+  color: #fff;
+  font-weight: 500;
+  font-size: 12px;
+  gap: 10px;
+  margin-bottom: 6px;
+}
+
+.button.vk {
+  background-color: #0077ff;
+}
+
+.button.yt {
+  background-color: #ff0000;
+}
+
+.button.tg {
+  background-color: #0088cc;
+}
+
+.button.hh {
+  background-color: #e1011c;
+}
